--- a/campeonato_app/templates/campeonato_app/home.html
+++ b/campeonato_app/templates/campeonato_app/home.html
@@ -1,9 +1,15 @@
-{% load static %}
 {% extends 'campeonato_app/base.html' %}
+{% load static %}
 {% block title %}Inicio{% endblock %}
 {% block content %}
 <div class="card">
   <h2>Bienvenido al Gestor de Campeonatos de Fútbol</h2>
   <p>Desde aquí puedes administrar equipos, jugadores, partidos y consultar estadísticas.</p>
+  <div class="btn-group">
+    <a href="{% url 'equipos' %}" class="btn btn-primary">Equipos</a>
+    <a href="{% url 'jugadores' %}" class="btn btn-primary">Jugadores</a>
+    <a href="{% url 'partidos' %}" class="btn btn-primary">Partidos</a>
+    <a href="{% url 'reportes' %}" class="btn btn-primary">Estadísticas</a>
+  </div>
 </div>
 {% endblock %}
