--- a/campeonato_app/templates/campeonato_app/base.html
+++ b/campeonato_app/templates/campeonato_app/base.html
@@ -1,8 +1,4 @@
 {% load static %}
-{% load crispy_forms_tags %}
-{% extends 'campeonato_app/base.html' %}
-{% block title %}Login{% endblock %}
-{% block content %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -12,6 +8,7 @@
     
     <!-- CSS principal -->
     <link rel="stylesheet" href="{% static 'campeonato_app/css/styles.css' %}" />
+
     
     <!-- Puedes agregar más archivos CSS aquí -->
     
@@ -21,18 +18,24 @@
     <header>
         <nav class="navbar">
             <div class="container">
-                <a href="{% url 'inicio' %}" class="logo">Campeonatos Fútbol</a>
+                <a href="{% url 'home' %}" class="logo">Campeonatos Fútbol</a>
                 <ul class="nav-links">
                     <li><a href="{% url 'equipos' %}">Equipos</a></li>
                     <li><a href="{% url 'jugadores' %}">Jugadores</a></li>
                     <li><a href="{% url 'partidos' %}">Partidos</a></li>
-                    <li><a href="{% url 'estadisticas' %}">Estadísticas</a></li>
+                    <li><a href="{% url 'reportes' %}">Estadísticas</a></li>
+                    {% if user.is_authenticated %}
+                        <li><a href="#">Hola, {{ user.username }}</a></li>
+                        <li><a href="{% url 'logout' %}">Cerrar sesión</a></li>
+                    {% else %}
+                        <li><a href="{% url 'login' %}">Iniciar sesión</a></li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
     </header>
 
-    <main class="container">
+    <main class="container" style="position: relative; background: url('{% static 'campeonato_app/img/football_icon.svg' %}') no-repeat top right; background-size: 150px 150px;">
         {% block content %}
         <!-- Contenido específico de cada página -->
         {% endblock %}
